# cloudhop

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  cloudhop.spec  cloudhop_main.py  cloudhop_win.spec  cloudmirror.py  docker-compose.yml  docker-entrypoint.sh  index.html  pyproject.toml  rthook_cloudhop.py
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-installers.yml  docker-publish.yml  tests.yml
cloudhop/: __init__.py  __main__.py  cli.py  email_notify.py  notify.py  server.py  transfer.py  utils.py
cloudhop/static/: dashboard.css  dashboard.js  wizard.css  wizard.js
cloudhop/templates/: __init__.py  dashboard.html  settings.html  wizard.html
cloudhop/tests/: conftest.py  test_cli.py  test_email_notify.py  test_schedule.py  test_server.py  test_server_integration.py  test_transfer.py  test_utils.py
cloudmirror/: __init__.py  __main__.py  cli.py  server.py  transfer.py  utils.py
cloudmirror/static/: dashboard.css  dashboard.js  wizard.js
cloudmirror/templates/: __init__.py  dashboard.html  wizard.html
cloudmirror/tests/: conftest.py  test_transfer.py  test_utils.py
docs/plans/: 2026-03-19-v060-open-source-release-design.md
qa/: faza10-code-review-diff.md  faza9-final-verification.md
