[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cloudhop"
version = "0.9.5"
description = "The easiest way to copy files between cloud storage services"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "Husam Soboh"}]
keywords = ["cloud", "file-transfer", "rclone", "google-drive", "onedrive", "dropbox", "icloud"]
dependencies = []
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
include = ["cloudhop", "cloudhop.*"]

[tool.setuptools.package-data]
cloudhop = ["templates/*.html", "static/*"]

[project.scripts]
cloudhop = "cloudhop.cli:main"

[project.urls]
Homepage = "https://github.com/husamsoboh-cyber/cloudhop"
Issues = "https://github.com/husamsoboh-cyber/cloudhop/issues"

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "SIM"]
ignore = ["E501", "E402", "SIM102", "SIM103", "SIM105", "SIM108", "SIM117"]

[tool.pytest.ini_options]
testpaths = ["cloudhop/tests"]
